# reading-list

./: .gitignore  Architecture.md  README.md  config.yaml  pyproject.toml
scripts/: refresh.sh
src/reading_list/: __init__.py  ai_analyzer.py  cli.py  config.py  content_generator.py  github_client.py  pipeline.py  version.py  visualizations.py
src/reading_list/scripts/: __init__.py  refresh.py
tests/: __init__.py  test_cli.py
